[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "polaris-data"
version = "0.8.5"
description = "Python SDK for the Polaris market data API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Polaris" }
]
dependencies = [
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "zstandard>=0.23.0"
]
keywords = ["polaris", "market-data", "trading", "sdk"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.urls]
Homepage = "https://polaris.supply"
Repository = "https://github.com/polaris-supply"

[dependency-groups]
dev = [
  "pytest>=8.0.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/polaris_data"]

[tool.pytest.ini_options]
testpaths = ["tests"]
